crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: bool) -> bool { !a }\n    pub fn bitand(a: bool, b: bool) -> bool { a & b }\n    pub fn bitor(a: bool, b: bool) -> bool { a | b }\n    pub fn bitxor(a: bool, b: bool) -> bool { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i1 @not(i1 %0) {
body:
  %not = xor i1 %0, true
  ret i1 %not
}

define i1 @bitand(i1 %0, i1 %1) {
body:
  %bit_and = and i1 %0, %1
  ret i1 %bit_and
}

define i1 @bitor(i1 %0, i1 %1) {
body:
  %bit_or = or i1 %0, %1
  ret i1 %bit_or
}

define i1 @bitxor(i1 %0, i1 %1) {
body:
  %bit_xor = xor i1 %0, %1
  ret i1 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
