crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_i128.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: i128) -> i128 { !a }\n    pub fn bitand(a: i128, b: i128) -> i128 { a & b }\n    pub fn bitor(a: i128, b: i128) -> i128 { a | b }\n    pub fn bitxor(a: i128, b: i128) -> i128 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i128 @not(i128 %0) {
body:
  %not = xor i128 %0, -1
  ret i128 %not
}

define i128 @bitand(i128 %0, i128 %1) {
body:
  %bit_and = and i128 %0, %1
  ret i128 %bit_and
}

define i128 @bitor(i128 %0, i128 %1) {
body:
  %bit_or = or i128 %0, %1
  ret i128 %bit_or
}

define i128 @bitxor(i128 %0, i128 %1) {
body:
  %bit_xor = xor i128 %0, %1
  ret i128 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
