crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_i32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: i32) -> i32 { !a }\n    pub fn bitand(a: i32, b: i32) -> i32 { a & b }\n    pub fn bitor(a: i32, b: i32) -> i32 { a | b }\n    pub fn bitxor(a: i32, b: i32) -> i32 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @not(i32 %0) {
body:
  %not = xor i32 %0, -1
  ret i32 %not
}

define i32 @bitand(i32 %0, i32 %1) {
body:
  %bit_and = and i32 %0, %1
  ret i32 %bit_and
}

define i32 @bitor(i32 %0, i32 %1) {
body:
  %bit_or = or i32 %0, %1
  ret i32 %bit_or
}

define i32 @bitxor(i32 %0, i32 %1) {
body:
  %bit_xor = xor i32 %0, %1
  ret i32 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
